--- a/frontRepo/admin/css/style.css
+++ b/frontRepo/admin/css/style.css
@@ -7,10 +7,16 @@
 /* layout */
 .wrap {
     display: flex;
+    justify-content: flex-end;
+    height: 100vh;
 }
 aside {
+    position: fixed;
+    top: 0;
+    left: 0;
     width: 260px;
     height: 100vh;
+    background-color: #fff;
 }
 main {
     width: calc(100% - 260px);
@@ -93,12 +99,15 @@ aside nav li:nth-child(7) a::before {background-image: url(../images/ico/ico_men
 /* header */
 header {
     display: flex;
+    position: sticky;
+    top: 0;
     align-items: center;
     justify-content: flex-end;
     height: 50px;
     padding: 0 20px;
     box-sizing: border-box;
     gap: 20px;
+    background-color: #fff;
 }
 header .welcomMsg {
     display: flex;
@@ -139,6 +148,8 @@ header > a:hover {
 /* footer */
 footer {
     padding: 10px 0;
+    background-color: #f5f5f5;
     text-align: center;
     font-size: var(--small-size);
+    color: #999;
 }
