--- a/frontRepo/user/css/allCss.css
+++ b/frontRepo/user/css/allCss.css
@@ -2,7 +2,7 @@
 
 @import './reset.css';
 @import './common.css';
-@import './allCss.css';
+@import './style.css';
 /* 조원들 css 추가자리 */
 
 /* ============================================================
