--- a/frontRepo/user/css/reset.css
+++ b/frontRepo/user/css/reset.css
@@ -4,6 +4,21 @@
     파일정의 : reset.css
 ============================================================ */
 
+/* 변수 */
+:root {
+    /* color */
+	--main-color: #FF9696;
+	--bg-color: #f5f5f5;
+	--font-color: #333;
+	--line-color: #ddd;
+
+    /* font */
+    --small-size: 0.8125rem; /* 13px */
+    --default-size: 0.875rem; /* 14px */
+    --middle-size: 0.9375rem; /* 15px */
+    --big-size: 1rem; /* 16px */
+}
+
 html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video, input, select, button, textarea {
 	margin: 0;
 	padding: 0;
