--- a/frontRepo/user/css/style.css
+++ b/frontRepo/user/css/style.css
@@ -3,4 +3,185 @@
     파일정의 : style.css
 ============================================================ */
 
+/* layout */
+.inner {
+    width: 1200px;
+    margin: 0 auto;
+}
+main {
+    min-height: calc(100vh - 70px - 70px);
+    padding: 60px 0;
+    box-sizing: border-box;
+}
 
+/* header */
+header {
+    position: sticky;
+    top: 0;
+    border-bottom: 1px solid #ddd;
+    box-sizing: border-box;
+    height: 70px;
+    background-color: rgba(255, 255, 255, .9);
+}
+header .inner {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 70px;
+}
+header h1 a {
+    display: block;
+    width: 44px;
+    height: 40px;
+    background: url(../images/logo.svg) no-repeat center;
+    text-indent: -9999em;
+}
+header .search_box {
+    display: flex;
+    position: relative;
+    align-items: center;
+    border: 1px solid #ddd;
+    padding: 0 20px;
+    box-sizing: border-box;
+    border-radius: 38px;
+    height: 38px;
+}
+header .search_box select {
+    height: 100%;
+    width: 120px;
+    color: #999;
+}
+header .search_box select:focus {
+    outline: none;
+}
+header .search_box input {
+    width: 200px;
+    height: 100%;
+    padding: 0 25px 0 10px;
+}
+header .search_box input:focus {
+    outline: none;
+}
+header .search_box button {
+    display: flex;
+    position: absolute;
+    top: 50%;
+    right: 18px;
+    width: 18px;
+    height: 19px;
+    background: url(../images/ico/ico_search.svg) no-repeat center;
+    text-indent: -9999em;
+    transform: translateY(-50%);
+}
+header .util_box {
+    display: flex;
+    align-items: center;
+    gap: 25px;
+}
+header .util_box .before_login a {
+    display: flex;
+    padding: 4px 15px;
+    border-radius: 30px;
+    border: 1px solid #ddd;
+    font-size: var(--small-size);
+    transition: .2s;
+}
+header .util_box .before_login a:hover {
+    background-color: var(--main-color);
+    border: 1px solid var(--main-color);
+    color: #fff;
+}
+header .util_box .after_login {
+    display: none;
+    gap: 25px;
+}
+header .util_box.on .after_login {
+    display: flex;
+}
+header .util_box .after_login .user_box {
+    position: relative;
+}
+header .util_box .after_login .user_box > a {
+    display: flex;
+}
+.user_box > a .img {
+    display: flex;
+    width: 26px;
+    height: 26px;
+}
+.user_box > a .user_nick {
+    display: flex;
+    align-items: center;
+    font-size: var(--small-size);
+    font-weight: 600;
+    color: #333;
+}
+.user_box > a .user_nick span {
+    margin-left: 3px;
+}
+.user_box > a .arrow {
+    display: flex;
+    position: relative;
+    width: 10px;
+    height: 26px;
+    margin-left: 10px;
+}
+.user_box > a .arrow::after {
+    content: "";
+    display: block;
+    position: absolute;
+    top: 50%;
+    right: 0;
+    width: 5px;
+    height: 5px;
+    margin-top: -4px;
+    border: 1px solid #999;
+    border-width: 0 2px 2px 0;
+    transform: rotate(45deg);
+}
+
+.pop_user_menu {
+    display: none;
+    position: absolute;
+    top: 70px;
+    right: 0;
+    width: 242px;
+    box-sizing: border-box;
+    padding: 20px;
+    background-color: #fff;
+    border-radius: 15px;
+    box-shadow: 0 0 12px rgba(0, 0, 0, .19);
+}
+.user_box.on .pop_user_menu {
+    display: block;
+}
+
+.ico_alarm {
+    display: block;
+    width: 20px;
+    height: 20px;
+    background: url(../images/ico/ico_alarm.svg) no-repeat center;
+}
+
+.alarm_box {
+    display: flex;
+    align-items: center;
+}
+
+.pop_alarm {
+    display: none;
+}
+.alarm_box.on .pop_alarm {
+    display: block;
+}
+
+/* footer */
+footer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 70px;
+    background-color: #f5f5f5;
+    font-size: var(--small-size);
+    color: #666;
+}
