--- a/frontRepo/user/css/common.css
+++ b/frontRepo/user/css/common.css
@@ -387,7 +387,7 @@
     border-radius: 5px;
     font-weight: 300;
     font-size: 12px;
-    color: #949494;
+    color: #999;
     transition: .2s;
 }
 .paging_box ul li a:hover,
@@ -413,15 +413,15 @@
     background-color: var(--main-color);
 }
 
-.paging_box ul li.prev_all a {background-image: url(../images/ico/ico_prev_off.svg);}
-.paging_box ul li.prev a {background-image: url(../images/ico/ico_prev_all_off.svg);}
-.paging_box ul li.next a {background-image: url(../images/ico/ico_next_off.svg);}
-.paging_box ul li.next_all a {background-image: url(../images/ico/ico_next_all_off.svg);}
+.paging_box ul li.prev_all a {background-image: url(../images/ico/ico_prev_all_off.svg);}
+.paging_box ul li.prev a {background-image: url(../images/ico/ico_prev_off.svg);}
+.paging_box ul li.next a {background-image: url(../images/ico/ico_next_all_off.svg);}
+.paging_box ul li.next_all a {background-image: url(../images/ico/ico_next_off.svg);}
 
-.paging_box ul li.prev_all:hover a {background-image: url(../images/ico/ico_prev_on.svg);}
-.paging_box ul li.prev:hover a {background-image: url(../images/ico/ico_prev_all_on.svg);}
-.paging_box ul li.next:hover a {background-image: url(../images/ico/ico_next_on.svg);}
-.paging_box ul li.next_all:hover a {background-image: url(../images/ico/ico_next_all_on.svg);}
+.paging_box ul li.prev_all:hover a {background-image: url(../images/ico/ico_prev_all_on.svg);}
+.paging_box ul li.prev:hover a {background-image: url(../images/ico/ico_prev_on.svg);}
+.paging_box ul li.next:hover a {background-image: url(../images/ico/ico_next_all_on.svg);}
+.paging_box ul li.next_all:hover a {background-image: url(../images/ico/ico_next_on.svg);}
 
 /* 모달 레이어팝업 */
 .modal_bg {
@@ -525,4 +525,27 @@
     font-weight: 400;
     color: #fff;
     cursor: pointer;
+}
+
+/* 탭 tab */
+.tab_btns {
+    display: flex;
+    gap: 20px;
+    margin: 40px 0 30px;
+}
+.tab_btns li button {
+    display: flex;
+    padding: 8px 20px;
+    border-radius: 30px;
+    box-sizing: border-box;
+    background-color: #f5f5f5;
+    font-size: var(--middle-size);
+    cursor: pointer;
+    transition: .2s;
+}
+.tab_btns li.on button,
+.tab_btns li:hover button {
+    background-color: var(--main-color);
+    color: #fff;
+    font-weight: 500;
 }
