231123 댓글/포스트 신고하기 html / css 수정

--- a/frontRepo/user/css/kkhpop.css
+++ b/frontRepo/user/css/kkhpop.css
@@ -14,8 +14,42 @@
 
 
 .modal_container{
+    width: 500px;
     
     background-color: lightgray;
-    border: 30px;
+    border: 3px;
+    border-color: black;
 }
 
+
+.check_area{
+    height: 50px;
+    display: flex;
+    align-items: center;
+
+}
+
+.reason_content{
+    font-size: 18px;
+    margin-left: 10px;
+}
+
+.report_reason{
+    width: 20px;
+    height: 20px;
+}
+
+
+
+
+
+
+
+.detail_content{
+    margin-top: 5px;
+    margin-left: 15px;
+    width: 600px;
+    height: 120px;
+    border: 2px;
+    border-color: black;
+}
