--- a/frontRepo/user/css/allCss.css
+++ b/frontRepo/user/css/allCss.css
@@ -3,7 +3,10 @@
 @import './reset.css';
 @import './common.css';
 @import './style.css';
-@import './hjy.css';
+@import './hjy.css'; /* 현지연 */
+@import './kkhpop.css'; /* 김광희 */
+@import './pbr.css'; /* 박범렬 */
+@import './ydg.css'; /* 양덕기 */
 /* 조원들 css 추가자리 */
 
 /* ============================================================
