--- a/frontRepo/user/css/hjy.css
+++ b/frontRepo/user/css/hjy.css
@@ -544,6 +544,10 @@
     border-bottom: 1px solid #ddd;
 }
 .blog_header h1 {
+    display: flex;
+    justify-content: center;
+}
+.blog_header h1 a {
     text-align: center;
     font-weight: 600;
     font-size: 27px;
@@ -1141,4 +1145,380 @@
 .blog.skin6 .blog_clock .time span,
 .blog.skin6 .blog_clock .time strong {
     color: #333;
+}
+
+/* 블로그 댓글 */
+.b_post_reply {
+    padding: 30px;
+    box-sizing: border-box;
+    border-radius: 15px;
+    background-color: #f5f5f5;
+}
+.b_post_reply > ul > li {
+    position: relative;
+    padding: 25px 0;
+    border-bottom: 1px solid #ddd;
+}
+.b_post_reply > ul > li.rreply::before {
+    content: "";
+    display: block;
+    position: absolute;
+    top: 26px;
+    left: 15px;
+    width: 22px;
+    height: 22px;
+    background: url(../images/ico/ico_rrply.svg) no-repeat center;
+}
+.b_post_reply > ul > li.rreply {
+    padding-left: 60px;
+}
+.b_post_reply > ul > li:first-child {
+    padding-top: 0;
+}
+.b_post_reply .user_nick {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+.b_post_reply .user_nick .img {
+    display: flex;
+    overflow: hidden;
+    align-items: center;
+    justify-content: center;
+    width: 26px;
+    height: 26px;
+    border-radius: 50%;
+}
+.b_post_reply .user_nick .img img {
+    display: block;
+    min-height: 100%;
+}
+.b_post_reply .user_nick strong {
+    font-size: var(--default-size);
+    font-weight: 500;
+    color: #333;
+}
+.b_post_reply .reply_content {
+    margin-top: 15px;
+    font-size: var(--default-size);
+    font-weight: 400;
+    color: #333;
+}
+.b_post_reply .reply_info {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    margin-top: 10px;
+}
+.b_post_reply .reply_info span,
+.b_post_reply .reply_info a {
+    font-size: var(--small-size);
+    color: #999;
+}
+.b_post_reply .reply_info a:hover {
+    text-decoration: underline;
+}
+.b_post_reply .reply_info span {
+    display: flex;
+    gap: 10px;
+}
+.b_post_reply .reply_info span::after {
+    content: "ㅣ";
+}
+.b_post_reply .btn_area {
+    margin-top: 10px;
+}
+.b_post_reply .btn_area > button {
+    display: flex;
+    padding: 4px 13px;
+    border-radius: 30px;
+    border: 1px solid #666;
+    color: #666;
+    cursor: pointer;
+}
+.reply_pop {
+    position: absolute;
+    top: 0;
+    right: 0;
+}
+li + li .reply_pop,
+.rreply .reply_pop {
+    top: 26px;
+}
+.reply_pop > a {
+    display: block;
+    width: 20px;
+    height: 20px;
+    background: url(../images/ico/ico_dot3.svg) no-repeat center;
+}
+.reply_pop > div {
+    display: none;
+    position: absolute;
+    top: 30px;
+    right: 0;
+    width: 95px;
+    flex-direction: column;
+    padding: 10px;
+    border-radius: 5px;
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, .2);
+    background-color: #fff;
+}
+li.on .reply_pop > div {
+    display: flex;
+}
+.b_post_reply li .reply_edit {
+    display: none;
+}
+.b_post_reply li.edit .reply_edit {
+    display: flex;
+}
+.b_post_reply li.edit .reply_info,
+.b_post_reply li.edit .btn_area,
+.b_post_reply li.edit .reply_content {
+    display: none;
+}
+.reply_edit {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    margin-top: 10px;
+}
+.reply_edit textarea {
+    display: block;
+    width: 100%;
+    padding: 10px;
+    box-sizing: border-box;
+    border-radius: 5px;
+    border: 1px solid #ddd;
+}
+.reply_edit textarea::placeholder {
+    color: #aaa;
+}
+.reply_edit > div {
+    display: flex;
+    gap: 10px;
+}
+.reply_edit button {
+    display: flex;
+    margin-top: 10px;
+    padding: 4px 13px;
+    border-radius: 30px;
+    border: 1px solid #666;
+    color: #666;
+    cursor: pointer;
+}
+.reply_edit > div button:nth-child(1) {
+    background-color: #ddd;
+}
+.reply_pop > div a {
+    display: flex;
+    align-items: center;
+    padding: 4px 10px;
+    border-radius: 5px;
+    font-size: var(--small-size);
+    gap: 9px;
+}
+.reply_pop > div a:hover {
+    background-color: #f5f5f5;
+}
+.reply_pop > div a::before {
+    content: "";
+    display: block;
+    width: 17px;
+    height: 17px;
+    background: no-repeat center;
+    background-size: auto 17px;
+}
+.reply_pop > div a.edit::before {background-image: url(../images/ico/ico_write_b.svg);}
+.reply_pop > div a.delete::before {background-image: url(../images/ico/ico_delete.svg);}
+.b_post_reply .paging_box {
+    margin-top: 20px;
+}
+
+li .reply_inp_box {
+    display: none;
+    position: relative;
+    margin-top: 50px;
+}
+li .reply_inp_box::before {
+    content: "";
+    display: block;
+    position: absolute;
+    top: -25px;
+    left: 0;
+    width: 100%;
+    height: 1px;
+    background-color: #ddd;
+}
+.b_post_reply > ul > li.reply .reply_inp_box {
+    display: block;
+}
+.b_post_reply li.reply .btn_area > button {
+    background-color: var(--main-color);
+    border-color: var(--main-color);
+    color: #fff;
+}
+.reply_inp_box {
+    padding: 20px;
+    border-radius: 10px;
+    background-color: #fff;
+    margin-top: 40px;
+}
+.reply_inp_box .reply_inp {
+    display: flex;
+    margin-top: 15px;
+}
+.reply_inp_box .reply_inp textarea {
+    display: flex;
+    width: 100%;
+    padding: 10px;
+    width: 100%;
+    min-height: 100px;
+    box-sizing: border-box;
+}
+.reply_inp_box .reply_inp textarea::placeholder {
+    color: #aaa;
+}
+.reply_inp_box .reply_footer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 10px;
+    margin-top: 10px;
+    border-top: 1px solid #ddd;
+}
+.reply_inp_box .reply_footer .count span {
+    font-size: var(--small-size);
+    color: #999;
+}
+.reply_inp_box .reply_footer .reply_btn button {
+    display: flex;
+    padding: 9px 22px;
+    border-radius: 30px;
+    border: 1px solid #666;
+    background-color: #fff;
+    color: #333;
+    cursor: pointer;
+}
+.b_post_reply > ul > li .blind {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    top: 20px;
+    left: 0;
+    width: calc(100% + 25px);
+    height: calc(100% - 45px);
+    background-color: #f5f5f5;
+    font-size: var(--default-size);
+    color: #999;
+}
+.b_post_reply > ul > li:first-child .blind {
+    top: 0;
+    height: calc(100% - 25px);
+}
+
+/* 블로그 관리 레이아웃 */
+.blog_set main {
+    background-color: #f5f5f5;
+}
+.blog_set_layout {
+    display: flex;
+    justify-content: space-between;
+}
+.blog_set_layout .left {
+    width: 200px;
+}
+.blog_set_layout .right {
+    width: calc(100% - 200px - 75px);
+    padding: 40px;
+    box-sizing: border-box;
+    background-color: #fff;
+    box-shadow: 0 0 14px rgba(0, 0, 0, .1);
+    border-radius: 5px;
+}
+.blog_set_layout .right h2 {
+    position: relative;
+    padding-bottom: 25px;
+    margin-bottom: 45px;
+    font-size: 20px;
+    color: #333;
+}
+.blog_set_layout .right h2::after {
+    content: "";
+    display: block;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 200px;
+    height: 1px;
+    background-color: #333;
+}
+.blog_set_layout .right .data_dl {
+    display: flex;
+    flex-direction: column;
+    gap: 25px;
+}
+.blog_set_layout .right .data_dl dl {
+    display: flex;
+}
+.blog_set_layout .right .data_dl dl dt {
+    padding-top: 7px;
+    width: 160px;
+    font-size: var(--middle-size);
+    color: #333;
+}
+.blog_set_layout .right .data_dl dl dd {
+    width: calc(100% - 160px);
+}
+.blog_set_layout .inp_box {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    gap: 15px;
+}
+.blog_set_layout .inp_box input {
+    display: block;
+    width: 370px;
+    padding: 8px 10px;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+}
+.blog_set_layout .inp_box input:focus {
+    border-color: var(--main-color);
+    outline: none;
+}
+.blog_set_layout .inp_box span {
+    font-size: var(--small-size);
+    color: #999;
+}
+.blog_set_layout .right .data_dl dl dd .profile_box {
+    display: flex;
+    gap: 15px;
+}
+.blog_set_layout .right .data_dl dl dd .profile_box .img {
+    display: flex;
+    overflow: hidden;
+    align-items: center;
+    justify-content: center;
+    width: 200px;
+    height: 200px;
+}
+.blog_set_layout .right .data_dl dl dd .profile_box .img img {
+    display: block;
+    min-width: 100%;
+    min-height: 100%;
+    max-height: 100%;
+}
+.blog_set_layout .right .data_dl dl dd .profile_box .profile_btn {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+.blog_set_layout .right .data_dl dl dd .profile_box .profile_btn button {
+    display: flex;
+    padding: 7px 23px;
+    border-radius: 5px;
+    background-color: #333;
+    color: #fff;
 }
