--- a/frontRepo/user/css/allCss.css
+++ b/frontRepo/user/css/allCss.css
@@ -7,6 +7,7 @@
 @import './kkhpop.css'; /* 김광희 */
 @import './pbr.css'; /* 박범렬 */
 @import './ydg.css'; /* 양덕기 */
+@import './joj.css'; /* 전옥진 */
 /* 조원들 css 추가자리 */
 
 /* ============================================================
