사용자layout.html 포스트 조회하기 올림

--- a/frontRepo/user/css/allCss.css
+++ b/frontRepo/user/css/allCss.css
@@ -8,6 +8,7 @@
 @import './pbr.css'; /* 박범렬 */
 @import './ydg.css'; /* 양덕기 */
 @import './joj.css'; /* 전옥진 */
+@import './lyj.css';/* 이예지 */
 /* 조원들 css 추가자리 */
 
 /* ============================================================
