사용자 메인,통합검색/관리자 포스팅관리,수정 html.css 완성

--- a/frontRepo/user/css/lyj.css
+++ b/frontRepo/user/css/lyj.css
@@ -58,5 +58,83 @@
     gap: 20px;
 }
 
+.postbox > :last-child {
+   border-bottom: 20px;
+}
 
 
+/* --------------------------------------------------------------------------------------------------------------------------------통합검색 */
+
+.select{
+    padding-top: 15px;
+    border-top: 1px solid gray;
+    padding-bottom: 15px;
+    border-bottom: 1px solid gray;
+}
+
+.postbox {
+    display:flex;
+    flex-direction: row;
+    justify-content: space-between;
+    /* align-items: center; */
+    gap: 30px;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    border-bottom: 1px solid gray;
+}
+
+.postbox .postWrite{
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 40px;
+}
+
+.postWriteLink a{
+    width: 100%;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp:2;
+    -webkit-box-orient: vertical;
+}
+
+.postWriteNick123{
+    display:flex;
+    flex-direction: row;
+    align-items: center;    
+    gap: 20px;
+}
+
+.postWriteNick{
+    display:flex;
+    flex-direction: row;
+}
+
+.postNickimg{
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    width:25px;
+    height: 25px;
+    border-radius: 50%;
+    background-color: #f5f5f5;
+}
+.postNickimg img{
+    width:12px;
+}
+
+.postWrite{
+    width: 605px;
+    height:148px;
+}
+
+.postImg{
+    overflow: hidden;
+    width: 185px;
+    height:185px;    
+}
+
+.searchText{
+    color:  #FF9696;
+}
