--- a/frontRepo/user/css/hjy.css
+++ b/frontRepo/user/css/hjy.css
@@ -188,7 +188,6 @@
 /* 로그인전 */
 .user_content .before_login {
     display: flex;
-    display: none;
     flex-direction: column;
     padding: 20px;
     gap: 10px;
@@ -520,11 +519,15 @@
 /* 블로그 headerCss */
 .blog header {
     position: static;
-}
-.blog header {
     border-bottom: none;
     height: 50px;
     background-color: transparent;
+}
+.blog header h1 {
+    display: none;
+}
+.blog header .blog_home {
+    display: block;
 }
 .blog header .inner {
     height: 50px;
@@ -533,9 +536,7 @@
 .blog header .search_box {
     background-color: #fff;
 }
-.blog header h1 {
-    display: none;
-}
+
 .blog header .search_box select {
     display: none;
 } 
